# DSA_Eoin

./: .gitignore  CMakeLists.txt  IndexEntry.h  Makefile  README.md  cat_art.txt  documentIndex.h  main.cpp  test.cpp  vectorBook.h  vectorBook.tpp
.github/workflows/: c-cpp.yml
books/: Carmilla_10007.txt  Dialogue of Comfort Against Tribulation_17075.txt  Frankenstein Or The Modern Prometheus_41445.txt  Souvenirs dun sexagénaire Tome I_22633.txt  The 2007 CIA World Factbook_27348.txt  The 2008 CIA World Factbook_29233.txt  The Eighteenth Brumaire of Louis Bonaparte_1346.txt  The Sailors WordBook_26000.txt  The literature of the Highlanders   a history of Gaelic literature from the  Project Gutenberg_74510.txt  The triumph of the cross_74508.txt  test.txt
include/: AccessBook.h  AsciiArt.h  AutocompleteHandler.cpp  AutocompleteHandler.h  DocumentIndexer.h  IndexEntry.h  Set.h  Trie.h  TrieNode.h  documentIndex.h  indexing.h  newSearch.h  pagination.h  pairImp.h  quicksort.h  search.h  serialization.h  utils.h  vectorBook.h
src/: AccessBook.cpp  AsciiArt.cpp  AutocompleteHandler.cpp  DocumentIndexer.cpp  DocumentIndexer.h  IndexEntry.cpp  IndexEntry.h  Set.tpp  Trie.tpp  TrieNode.tpp  documentIndex.h  indexing.cpp  main.cpp  newSearch.cpp  pagination.cpp  quicksort.cpp  search.cpp  serialization.h  test.cpp  utils.cpp  vectorBook.h  vectorBook.tpp  word_operation.cpp  word_operation.h
tests/: test_autocomplete_handler.cpp  test_indexing.cpp  test_search.cpp  test_trie.cpp  test_trieNode.cpp  test_trie_node.cpp
